# azure-sphere-aws-iot-device-sdk-embedded-c

./: CMakeLists.txt  README.md  app_manifest.json  demo_config.h  logging_stack.h  main.c
aws-iot-device-sdk-embedded-C/demos/: demo_config.h
aws-iot-device-sdk-embedded-C/demos/http/http_demo_s3_download/: http_demo_s3_download.c
aws-iot-device-sdk-embedded-C/demos/http/http_demo_s3_upload/: http_demo_s3_upload.c
aws-iot-device-sdk-embedded-C/demos/mqtt/mqtt_demo_basic_tls/: mqtt_demo_basic_tls.c
aws-iot-device-sdk-embedded-C/demos/mqtt/mqtt_demo_mutual_auth/: mqtt_demo_mutual_auth.c
aws-iot-device-sdk-embedded-C/demos/shadow/shadow_demo_main/: shadow_demo_helpers.c  shadow_demo_main.c
aws-iot-device-sdk-embedded-C/platform/posix/transport/include/: wolfssl_posix.h
aws-iot-device-sdk-embedded-C/platform/posix/transport/src/: sockets_posix.c  wolfssl_posix.c
script/: preconfigure.py
script/lambda/: AzureSphereJITR.py
